--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -52,7 +52,7 @@
                     <a href="topic.html">话题中心</a>
                 </li>
                 <li class="active">
-                    <a href="statistic.html">交易数据</a>
+                    <a href="contact.html">合约展示</a>
                 </li>
                 <li th:if="${user == null}">
                     <a href="login.html"><span>登录</span></a>
@@ -88,33 +88,48 @@
                 <div class="square pull-left">
                     <img src="images/team/member2.png" alt="Feature-img" height="80" width="100"/>
                 </div>
-                <h4>
-                    John Doe
-                </h4>
+                <a href="contactdetail.html">
+                    <h4>
+                        合约名称
+                    </h4>
+                </a>
                 <p>
-                    Web Developer , Technext
+                    买方 , 卖方
+                </p>
+                <p>
+                    交割日期
                 </p>
             </div>
             <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
                 <div class="square pull-left">
                     <img src="images/team/member1.png" alt="Feature-img" height="80" width="100"/>
                 </div>
+                <a href="contactdetail.html">
                 <h4>
-                    Jane Ley
+                    合约名称
                 </h4>
+                </a>
                 <p>
-                    Software Developer , Technext
+                    买方 , 卖方
+                </p>
+                <p>
+                    交割日期
                 </p>
             </div>
             <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
                 <div class="square pull-left">
                     <img src="images/team/member2.png" alt="Feature-img" height="80" width="100"/>
                 </div>
-                <h4>
-                    Jany Doe
-                </h4>
+                <a href="contactdetail.html">
+                    <h4>
+                        合约名称
+                    </h4>
+                </a>
                 <p>
-                    App Developer , Technext
+                    买方 , 卖方
+                </p>
+                <p>
+                    交割日期
                 </p>
             </div>
         </div>
@@ -123,33 +138,48 @@
                 <div class="square pull-left">
                     <img src="images/team/member3.png" alt="Feature-img" height="80" width="100"/>
                 </div>
-                <h4>
-                    John Doe
-                </h4>
+                <a href="contactdetail.html">
+                    <h4>
+                        合约名称
+                    </h4>
+                </a>
                 <p>
-                    Android Developer , Technext
+                    买方 , 卖方
+                </p>
+                <p>
+                    交割日期
                 </p>
             </div>
             <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
                 <div class="square pull-left">
                     <img src="images/team/member2.png" alt="Feature-img" height="80" width="100"/>
                 </div>
+                <a href="contactdetail.html">
                 <h4>
-                    Chris Way
+                    合约名称
                 </h4>
+                </a>
                 <p>
-                    iOS Developer , Technext
+                    买方 , 卖方
+                </p>
+                <p>
+                    交割日期
                 </p>
             </div>
             <div class="blockquote-box animated wow fadeInRight clearfix">
                 <div class="square pull-left">
                     <img src="images/team/member1.png" alt="Feature-img" height="80" width="100"/>
                 </div>
-                <h4>
-                    Christopher
-                </h4>
+                <a href="contactdetail.html">
+                    <h4>
+                        合约名称
+                    </h4>
+                </a>
                 <p>
-                    Web Developer , Technext
+                    买方 , 卖方
+                </p>
+                <p>
+                    交割日期
                 </p>
             </div>
         </div>
