--- a/src/main/resources/templates/contactdetail.html
+++ b/src/main/resources/templates/contactdetail.html
@@ -77,65 +77,33 @@
 
 <section class="container row">
     <div style="height:20px;" class="col-md-3"></div>
-
     <div class="aui-content-up col-md-7">
-        <form th:method="post">
+        <form >
             <div class="aui-content-up-form">
-                <h2 style="padding-bottom: 15px; padding-left: 230px;" class="jyfw-title">话题讨论</h2>
+                <h2 style="padding-bottom: 15px; padding-left: 230px;" class="jyfw-title">合约详情</h2>
             </div>
-            <div class="topic-discuss-title" >
-                <div class="row" >
-                    <div class="col-md-8" style="padding-left: 30px; padding-top: 15px;">
-                        <p class="demand-item-title">话题名称</p>
-                    </div>
-                    <div class="col-md-2" style="padding-top: 10px;">
-                        <p class="demand-item-detail">用户名</p>
-                    </div>
-                    <div class="col-md-2" style="padding-top: 10px;">
-                        <p class="demand-item-detail">发布时间</p>
-                    </div>
+
+
+            <div class="row" style="background: #fff; padding-bottom: 30px; border: 1px solid #ccc;">
+                <h4 style="text-align: center; padding-bottom: 15px; padding-top: 10px;">合约名称</h4>
+                <div class="col-md-6" style="padding-bottom: 30px;">
+                    买方：
                 </div>
-                <p style="padding-left: 15px;">话题描述......</p>
-                <hr/>
-                <div class="row">
-                    <div class="col-md-8">
-                        <p style="padding-left: 15px;">评论内容1</p>
-                    </div>
-                    <div class="col-md-2 demand-item-detail">用户名</div>
-                    <div class="col-md-2 demand-item-detail">发布时间</div>
+                <div class="col-md-6" style="padding-bottom: 30px; padding-left: 30px;">
+                    卖方：
                 </div>
-                <hr/>
-                <div class="row">
-                    <div class="col-md-8">
-                        <p style="padding-left: 15px;">评论内容2</p>
-                    </div>
-                    <div class="col-md-2 demand-item-detail">用户名</div>
-                    <div class="col-md-2 demand-item-detail">发布时间</div>
-                </div>
-                <hr/>
-                <div class="row">
-                    <div class="col-md-8">
-                        <p style="padding-left: 15px;">......</p>
-                    </div>
-                    <div class="col-md-2 demand-item-detail"></div>
-                    <div class="col-md-2 demand-item-detail"></div>
-                </div>
+                <p style="padding-left: 30px;">生成日期：（需求匹配成功的日期）</p>
+                <p style="padding-left: 30px;">合约标的：</p>
+                <p style="padding-left: 30px;">交易数量：</p>
+                <p style="padding-left: 30px;">交易总价：</p>
+                <p style="padding-left: 30px;">交割日期：</p>
+                <p style="padding-left: 30px;">合约状态：</p>
 
             </div>
-            <div class="aui-form-group clear">
-                <label class="aui-label-control">
-                    写评论<em>*</em>
-                </label>
-                <div class="aui-form-input" style="padding-bottom: 15px;">
-                    <textarea class="form-control" minlength="5"></textarea>
-                </div>
-            </div>
-            <div class="aui-form-group-text">
-                <h3>温馨提示</h3>
-                <p>为了使您能够体验更好的本平台服务，禁止发布虚假内容。</p>
-            </div>
-            <div class="aui-btn-default" style="padding-left: 230px;">
-                <button class="aui-btn aui-btn-account">发布</button>
+
+
+            <div class="aui-btn-default" style="text-align: center; padding-top: 30px;">
+                <button class="aui-btn aui-btn-account">返回</button>
             </div>
         </form>
 
