--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -57,7 +57,7 @@
                     <a href="topic.html">话题中心</a>
                 </li>
                 <li>
-                    <a href="statistic.html">交易数据</a>
+                    <a href="contact.html">合约展示</a>
                 </li>
                 <li class="active">
                     <a href="login.html"><span>登录</span></a>
