--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
                     <a href="topic.html">话题中心</a>
                 </li>
                 <li>
-                    <a href="statistic.html">交易数据</a>
+                    <a href="contact.html">合约展示</a>
                 </li>
                 <li th:if="${user == null}">
                     <a href="login.html"><span>登录</span></a>
@@ -128,9 +128,128 @@
         </dl>
     </div>
 </section>
+
+<section id="services" class="services-section section-global-wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="services-header">
+                <h3 class="services-header-title">金融合约精选</h3>
+                <p class="services-header-body"><em>精挑 ·细选</em></p>
+            </div>
+        </div>
+
+        <div class="row services-row services-row-head services-row-1">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
+                    <h4 class="services-title">合约名称</h4>
+                    <div class="col-md-6">
+                        <p class="services-body">买方：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方：</p>
+                    </div>
+                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
+                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="services-group wow animated zoomIn" data-wow-offset="40">
+                    <h4 class="services-title">合约名称</h4>
+                    <div class="col-md-6">
+                        <p class="services-body">买方：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方：</p>
+                    </div>
+                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
+                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="services-group wow animated fadeInRight" data-wow-offset="40">
+                    <h4 class="services-title">合约名称</h4>
+                    <div class="col-md-6">
+                        <p class="services-body">买方：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方：</p>
+                    </div>
+                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
+                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row services-row services-row-tail services-row-2">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
+                    <h4 class="services-title">合约名称</h4>
+                    <div class="col-md-6">
+                        <p class="services-body">买方：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方：</p>
+                    </div>
+                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
+                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="services-group wow animated zoomIn" data-wow-offset="40">
+                    <h4 class="services-title">合约名称</h4>
+                    <div class="col-md-6">
+                        <p class="services-body">买方：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方：</p>
+                    </div>
+                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
+                    <p style="text-align: left; padding-left: 30px;">合约条款：</p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="services-group wow animated fadeInRight" data-wow-offset="40">
+                    <h4 class="services-title">合约名称</h4>
+                    <div class="col-md-6">
+                        <p class="services-body">买方：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方：</p>
+                    </div>
+                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
+                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
+                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
 <div class="container">
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-6">
             <div class="blog-post">
                 <h1 class="blog-title">
                     <i class="fa fa-file-text"></i>
@@ -219,145 +338,101 @@
                 </div>
             </div>
             <hr/>
-
-
         </div>
 
-        <div class="col-md-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><strong>Sign in </strong></h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form">
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Username or Email</label>
-                            <input type="email" class="form-control" style="border-radius:0px" id="exampleInputEmail1"
-                                   placeholder="Enter email"/>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password <a href="/sessions/forgot_password">(forgot
-                                password)</a></label>
-                            <input type="password" class="form-control" style="border-radius:0px"
-                                   id="exampleInputPassword1" placeholder="Password"/>
-                        </div>
-                        <button type="submit" class="btn btn-sm btn-default">Sign in</button>
-                    </form>
+        <div class="col-md-6">
+            <div class="blog-post">
+                <h1 class="blog-title">
+                    <i class="fa fa-file-text"></i>
+                    Alice in Wonderland, part dos
+                </h1>
+                <br/>
+                <img src="images/slider/blog3.jpg" alt="Feature-img" align="right" width="100%" class="blog-image"/>
+                <br/>
+                <p>
+                    'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then
+                    they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the
+                    Gryphon said to the Mock Turtle, 'Drive on, old fellow! Don't be all day about it!' and he went on
+                    in these words:
+                    'Yes, we went to school in the sea, though you mayn't believe it—'
+                    'I never said I didn't!' interrupted Alice.
+                    'You did,' said the Mock Turtle.
+                </p>
+                <div>
+                    <span class="badge">Posted 2012-08-02 20:47:04</span>
+                    <div class="pull-right">
+                        <span class="label label-default">alice</span>
+                        <span class="label label-primary">story</span>
+                        <span class="label label-success">blog</span>
+                        <span class="label label-info">personal</span>
+                        <span class="label label-warning">Warning</span>
+                        <span class="label label-danger">Danger</span>
+                    </div>
                 </div>
             </div>
+            <hr/>
 
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                </ol>
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="http://placehold.it/292/16a085/FFF&amp;text=CSS3;" alt="" class="img-responsive"/>
-                    </div>
-                    <div class="item">
-                        <img src="http://placehold.it/292/d35400/FFF&amp;text=HTML5;" alt="" class="img-responsive"/>
-                    </div>
-                    <div class="item">
-                        <img src="http://placehold.it/292/2980b9/FFF&amp;text=RESPONSIVE;" alt=""
-                             class="img-responsive"/>
-                    </div>
-                    <div class="item">
-                        <img src="http://placehold.it/292/8e44ad/FFF&amp;text=BOOTSTRAP3;" alt=""
-                             class="img-responsive"/>
+            <div class="blog-post">
+                <h1 class="blog-title">
+                    <i class="fa fa-file"></i>
+                    Revolution has begun!
+                </h1>
+                <img src="images/slider/blog2.jpg" alt="Feature-img" align="right" width="100%" class="blog-image"/>
+                <br/>
+                <p>
+                    'I am bound to Tahiti for more men.'
+                    'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to
+                    the boat; and climbing the gunwale, stood face to face with the captain.
+                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I
+                    swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning
+                    strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam
+                    back to his comrades.
+                </p>
+                <div>
+                    <span class="badge">Posted 2012-08-02 20:47:04</span>
+                    <div class="pull-right"><span class="label label-default">alice</span>
+                        <span class="label label-primary">story</span>
+                        <span class="label label-success">blog</span>
+                        <span class="label label-info">personal</span>
+                        <span class="label label-warning">Warning</span>
+                        <span class="label label-danger">Danger</span>
                     </div>
                 </div>
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
             </div>
+            <hr/>
+
+            <div class="blog-post">
+                <h1 class="blog-title">
+                    <i class="fa fa-cloud"></i>
+                    Alice in Wonderland, part dos
+                </h1>
+                <img src="images/slider/blog1.jpg" alt="Feature-img" align="right" width="100%" class="blog-image"/>
+                <p>
+                    'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then
+                    they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the
+                    Gryphon said to the Mock Turtle, 'Drive on, old fellow! Don't be all day about it!' and he went on
+                    in these words:
+                    'Yes, we went to school in the sea, though you mayn't believe it—'
+                    'I never said I didn't!' interrupted Alice.
+                    'You did,' said the Mock Turtle.
+                </p>
+                <div>
+                    <span class="badge">Posted 2012-08-02 20:47:04</span>
+                    <div class="pull-right">
+                        <span class="label label-default">alice</span>
+                        <span class="label label-primary">story</span>
+                        <span class="label label-success">blog</span>
+                        <span class="label label-info">personal</span>
+                        <span class="label label-warning">Warning</span>
+                        <span class="label label-danger">Danger</span>
+                    </div>
+                </div>
+            </div>
+            <hr/>
         </div>
     </div>
 </div>
-<section id="services" class="services-section section-global-wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="services-header">
-                <h3 class="services-header-title">金融合约产品</h3>
-                <p class="services-header-body"><em>精挑 ·细选</em></p>
-                <hr/>
-            </div>
-        </div>
 
-        <div class="row services-row services-row-head services-row-1">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                    <p class="services-icon"><span class="fa fa-android fa-5x"></span></p>
-                    <h4 class="services-title">Android</h4>
-                    <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat
-                        quis dignissim.</p>
-                    <p class="services-more"><a href="#">Find Out More</a></p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                    <p class="services-icon"><i class="fa fa-apple fa-5x"></i></p>
-                    <h4 class="services-title">Apple</h4>
-                    <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat
-                        quis dignissim.</p>
-                    <p class="services-more"><a href="#">Find Out More</a></p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                    <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
-                    <h4 class="services-title">EASY TO USE</h4>
-                    <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat
-                        quis dignissim.</p>
-                    <p class="services-more"><a href="#">Find Out More</a></p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row services-row services-row-tail services-row-2">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                    <p class="services-icon"><span class="fa fa-windows fa-5x"></span></p>
-                    <h4 class="services-title">Windows</h4>
-                    <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat
-                        quis dignissim.</p>
-                    <p class="services-more"><a href="#">Find Out More</a></p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                    <p class="services-icon"><i class="fa fa-eye fa-5x"></i></p>
-                    <h4 class="services-title">RETINA READY</h4>
-                    <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat
-                        quis dignissim.</p>
-                    <p class="services-more"><a href="#">Find Out More</a></p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                    <p class="services-icon"><i class="fa fa-cube fa-5x"></i></p>
-                    <h4 class="services-title">Cubic</h4>
-                    <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat
-                        quis dignissim.</p>
-                    <p class="services-more"><a href="#">Find Out More</a></p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</section>
 <div class="copyright text center">
     <p>Copyright &copy; 2018.交易服务 All rights reserved.</p>
     <p>作者：140104300123 陈璐</p>
