--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -39,19 +39,19 @@
                 <li>
                     <a href="news.html">新闻资讯</a>
                 </li>
-                <li class="active">
+                <li>
                     <a href="demand.html">需求社区</a>
                 </li>
-                <li class="active">
+                <li>
                     <a href="topic.html">话题中心</a>
                 </li>
                 <li>
-                    <a href="statistic.html">交易数据</a>
+                    <a href="contact.html">合约展示</a>
                 </li>
                 <li th:if="${user == null}">
                     <a href="login.html"><span>登录</span></a>
                 </li>
-                <li th:if="!${user == null}" class="dropdown">
+                <li th:if="!${user == null}" class="dropdown activity">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">欢迎！<span th:text="${user.name}"></span><span class="caret"></span></a>
                     <ul class="dropdown-menu">
