--- a/src/main/resources/templates/topicadd.html
+++ b/src/main/resources/templates/topicadd.html
@@ -55,7 +55,7 @@
                     <a href="topic.html">话题中心</a>
                 </li>
                 <li>
-                    <a href="statistic.html">交易数据</a>
+                    <a href="contact.html">合约展示</a>
                 </li>
                 <li th:if="${user == null}">
                     <a href="login.html"><span>登录</span></a>
