--- a/src/main/resources/templates/topic.html
+++ b/src/main/resources/templates/topic.html
@@ -115,6 +115,12 @@
 
 <div id="banners"></div>
 
+<div class="container pages text-right">
+    <ul class="pagination">
+    </ul>
+</div>
+
+
 
 <div class="copyright text center">
     <p>Copyright &copy; 2018.交易服务 All rights reserved.</p>
