--- a/src/main/resources/templates/topicdiscuss.html
+++ b/src/main/resources/templates/topicdiscuss.html
@@ -65,7 +65,8 @@
                        aria-expanded="false">欢迎！<span th:text="${user.name}"></span><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/mycontact">我的合约</a></li>
-                        <li><a href="/mypage">个人主页</a></li>
+                        <li><a href="/mydemand">我的需求</a></li>
+                        <li><a href="/mytopic">我的话题</a></li>
                         <li><a href="/logout">安全退出</a></li>
                     </ul>
                 </li>
@@ -140,6 +141,7 @@
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="js/up.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/mobiscroll.custom.min.js"></script>
 <script>
     var theme = "ios";
