--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/demand.css" />
+    <link rel="stylesheet" href="css/demand.css"/>
 </head>
 
 <body>
@@ -38,10 +38,10 @@
                 <li>
                     <a href="news.html">新闻资讯</a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="demand.html">需求社区</a>
                 </li>
-                <li class="active">
+                <li>
                     <a href="topic.html">话题中心</a>
                 </li>
 
@@ -70,12 +70,12 @@
 <div class="container" style="padding-left: 30px;">
     <div class="jyfw-section row">
         <div class="col-md-3">
-            <h3 class="jyfw-title">话题中心 <span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></h3>
+            <h3 class="jyfw-title">需求列表 <span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></h3>
             <div class="block"></div>
         </div>
         <div class="col-md-4">
             <div class="input-group row" style="height: 60px;">
-                <input type="text" class="form-control" id="topicName" placeholder="请输入标的名称" style="margin-top: 20px;"/>
+                <input type="text" class="form-control" id="dealObject" placeholder="请输入标的名称" style="margin-top: 20px;"/>
                 <span class="input-group-btn">
                     <button class="btn btn-primary btn-search" id="btn-search" style="margin-top: 14px;">查找</button>
                 </span>
@@ -83,9 +83,9 @@
         </div>
         <div class="col-md-3"></div>
         <div class="col-md-2">
-            <a href="topicadd.html" class="jyfw-section">
+            <a href="demandadd.html" class="jyfw-section">
                 <div style="padding-top: 18px;">
-                    <button type="button" class="btn btn-primary">发起话题</button>
+                    <button type="button" class="btn btn-primary">发布需求</button>
                 </div>
             </a>
         </div>
@@ -93,25 +93,21 @@
 
 </div>
 
-<div class="container" id="topic">
+<div class="container" id="demand-item">
     <div class="demand-item-list">
+        <p class="demand-item-title">
+            需求发布人<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span><span>：海子</span>
+            <span style="padding-left: 36px;">身份：<span style="font-size: 24px; color: red;">卖方</span></span>
+        </p>
         <div class="row">
-            <div class="col-md-8">
-                <p class="demand-item-title">话题名称<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></p>
-            </div>
-            <div class="col-md-2">
-                <p class="demand-item-detail">用户名</p>
-            </div>
-            <div class="col-md-2">
-                <p class="demand-item-detail">发布时间</p>
-            </div>
-        </div><p>话题描述......</p>
-        <div class="demand-item-detail row">
-            <div class="col-md-8"></div><div class="col-md-1">xx条评论</div><div class="col-md-1">点赞</div>
-            <div class="col-md-2" style="padding-bottom: 15px;"><a href="topicdiscuss.html">参与讨论</a></div>
+            <div class="col-md-2"><span class="demand-item-object">你好</span><p class="demand-item-detail">合约标的</p></div>
+            <div class="col-md-2"><span class="demand-item-num">你好</span><p class="demand-item-detail">交易数量</p></div>
+            <div class="col-md-2"><span class="demand-item-price">你好</span><p class="demand-item-detail">交易价格</p></div>
+            <div class="col-md-2"><span class="demand-item-num">你好</span><p class="demand-item-detail">交易日期</p></div>
+            <div class="col-md-2"><span class="demand-item-object">你好</span><p class="demand-item-detail">合约状态</p></div>
+            <div class="col-md-2"><a href="#" class="jyfw-section"><button type="button" class="btn btn-primary">请求匹配</button></a></div>
         </div>
     </div>
-
 </div>
 
 <div id="banners"></div>
@@ -121,8 +117,6 @@
     </ul>
 </div>
 
-
-
 <div class="copyright text center">
     <p>Copyright &copy; 2018.交易服务 All rights reserved.</p>
     <p>作者：140104300123 陈璐</p>
@@ -130,45 +124,50 @@
 
 
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/app.js"></script>
-<script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript">
     $(function () {
         Page(1, 10);
     })
 
+    // 搜索点击事件
     $("#btn-search").click(function () {
         Page(1, 10);
     })
 
     function Page(page, count) {
-        var topicName = $("#topicName").val();
+        var dealObject = $("#dealObject").val();
         $.ajax({
-            url: '/topics',
+            url: '/demands',
             data: {
                 "page": page,
                 "count": count,
-                "topicName": topicName,
-                "status": 1
+                "status": 1,
+                "dealObject": dealObject
             },
-            type: "POST",
+            type: 'POST',
             success: function (result) {
                 if(result.success) {
-                    $("#topic").empty();
+                    loadPageInfo(result.data);
+                    $("#demand-item").empty();
                     loadPageInfo(result.data);
                     $(result.data.list).each(function (i, item) {
                         var pageStr = '';
                         pageStr = pageStr + '<div class="demand-item-list">';
-                        pageStr = pageStr + '<div class="row"><div class="col-md-8"><p class="demand-item-title">' + item.topicName + '<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></p></div>';
-                        pageStr = pageStr + '<div class="col-md-2"><p class="demand-item-detail">'+ item.name +'</p></div><div class="col-md-2"><p class="demand-item-detail">'+ timeExchange(item.createTime) +'</p></div>';
-                        pageStr = pageStr + '</div><p>'+ item.content +'</p>';
-                        pageStr = pageStr + '<div class="demand-item-detail row">';
-                        pageStr = pageStr + '<div class="col-md-9"></div><div class="col-md-1">xx条评论</div>';
-                        pageStr = pageStr + '<div class="col-md-2" style="padding-bottom: 15px; color: blue;"><a href="/topicdiscuss?topicId=' + item.id + '">参与讨论</a></div>';
+                        pageStr = pageStr + '<p class="demand-item-title">需求发布人<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span><span>：'+ item.username + '</span>';
+                        pageStr = pageStr + '<span style="padding-left: 36px;">身份：<span style="font-size: 24px; color: #0615ff;">' + item.category + '</span></span></p>';
+                        pageStr = pageStr + '<div class="row">';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-object">' + item.dealObject + '</span><p class="demand-item-detail">合约标的</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-num">' + item.dealNum + '</span><p class="demand-item-detail">交易数量</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-price">' + item.dealPrice + '</span><p class="demand-item-detail">交易价格</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-num">' + timeExchange(item.dealTime) + '</span><p class="demand-item-detail">交易日期</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-object">' + demandStatusExchange(item.status) + '</span><p class="demand-item-detail">合约状态</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><a class="jyfw-section"><button type="button" class="btn btn-primary" onclick="confirmdemand('+ item.id + ')">请求匹配</button></a></div>';
                         pageStr = pageStr + '</div>';
                         pageStr = pageStr + '</div>';
-                        $("#topic").append(pageStr);
+                        $("#demand-item").append(pageStr);
                     })
                 }else {
                     console.log("获取数据失败！");
@@ -177,7 +176,10 @@
         })
     }
 
-    new WOW().init();
+    function confirmdemand(demandId) {
+        window.location.href = 'confirmdemand?demandId=' + demandId;
+    }
+
 </script>
 
 </body>
