--- a/src/main/resources/templates/demand.html
+++ b/src/main/resources/templates/demand.html
@@ -57,7 +57,8 @@
                        aria-expanded="false">欢迎！<span th:text="${user.name}"></span><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/mycontact">我的合约</a></li>
-                        <li><a href="/mypage">个人主页</a></li>
+                        <li><a href="/mydemand">我的需求</a></li>
+                        <li><a href="/mytopic">我的话题</a></li>
                         <li><a href="/logout">安全退出</a></li>
                     </ul>
                 </li>
@@ -90,6 +91,18 @@
         </div>
     </div>
 
+</div>
+
+<div >
+    <ul class="nav navbar-nav" style="text-align: center;">
+        <li>
+            <a href="#">卖方</a>
+        </li>
+        <li>
+            <a href="#">买方</a>
+        </li>
+
+    </ul>
 </div>
 
 <div class="container" id="demand-item">
